deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: docker-spring
spec:
    replicas: 2
    selector:
       matchLabels:
          app: docker-spring
    template:
       metadata:
          labels:
             app: docker-spring
       spec:
          containers:
          - name: docker-spring
            image: oklimenko/docker-spring:2_4
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 15
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 15
              periodSeconds: 5
