service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-spring
spec:
  selector:
    app: docker-spring
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
