ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp($|/)(.*)
          backend:
            serviceName: docker-spring
            servicePort: 8000
